--- a/index.html
+++ b/index.html
@@ -15,10 +15,28 @@
 </head>
 
 <body>
-
-  
-     
+    <nav>
+        <div class="top-nav">
+          <h1>Fun Bus</h1>
+        </div>
+        <div class="btm-nav">
+          <a href="#">Home</a>
+          <a href="#">About Us</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+        </div>
+      </nav>
   <div class="container home">
+      
+        <header>
+          <div class="img-header">
+            <img src="img/fun-bus.jpg" alt="image of a bus">
+          </div>
+          <div class="text-header">
+          <h2>Welcome to Fun Bus!</h2>
+          <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+        </div>
+        </header>
    
     <section class="content-section">
       <div class="text-content">
