form added, hit a stretch goal

--- a/index.html
+++ b/index.html
@@ -85,13 +85,38 @@
         <h4>Mountain Excursion</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign.
           Traveler blogger website design expedition clean excursion traveling.</p>
-          <div class="btn"><button class="mtn-sign-up">Sign Me Up!</button></div>
+        <div class="btn"><button class="mtn-sign-up">Sign Me Up!</button></div>
       </div>
       <div class="destination">
         <h4>Island Getaway</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign.
           Traveler blogger website design expedition clean excursion traveling.</p>
         <div class="btn"><button class="island-sign-up">Sign Me Up!</button></div>
+      </div>
+    </section>
+    <section id="form-submission">
+      <h2>Submit Your Request with Us Today!</h2>
+      <div class="theform">
+        <form>
+          <p>Name</p>
+          <input type="text" id="name" name="yourname">
+          <p>Phone Number</p>
+          <input type="text" id="phone" name="phone">
+          <p>Email Address</p>
+          <input type="text" id="email" name="email">
+          <p>Vacation Package</p>
+          <select id="package" name="package">
+            <option value="funinsun">Fun In the Sun</option>
+            <option value="mountain">Mountain Excursion</option>
+            <option value="island">Island Getaway</option>
+          </select>
+          <p>Special Instruction</p>
+          <textarea></textarea><br>
+
+          <input type="submit" value="submit">
+        </form>
+
+
       </div>
     </section>
   </div><!-- container -->
